# Crane

./: .gitignore  README.md  project_paths.py  requirements.txt
.venv_test/: pyvenv.cfg
cost_model/: __init__.py  energy_model.py  latency_model.py
example/: advanced_networks_test.py  compare_all_networks_same_source_merge.py  compare_all_networks_stage_vs_layer.py  compare_transformer_granularity.py  compare_transformer_stage_layer_with_merge.py  resnet50_test.py  run_official_nns_layer_level.py  run_official_nns_suite.py  run_set_network_suite.py  run_supplemented_nns_suite.py  run_transformer_min_layer_block_experiment.py  run_transformer_training_repro.py  schedule_html.py
include/: crane_paper_extracted.txt
model/: __init__.py  dag_parser.py  layer.py
outputs/: OUTPUT_FORMAT_RULES.txt  (+1 more)
set_network_src/: CMakeLists.txt  README.txt
set_network_src/include/: network_builders.h  network_profile.h
set_network_src/profiles/: alexnet.json  attention_group_builder.json  darknt19.json  densenet.json  gnmt.json  googlenet.json  incep_resnet.json  llm.json  pnasnet.json  resnet.json  transformer.json  transformer_fused.json  transformer_grouped.json  transformer_semifused.json  transformer_semigrouped.json  vgg.json  zfnet.json
set_network_src/src/: alexnet.cpp  attention_group_builder.cpp  darknt19.cpp  densenet.cpp  gnmt.cpp  googlenet.cpp  incep_resnet.cpp  llm.cpp  network_registry.cpp  pnasnet.cpp  resnet.cpp  transformer.cpp  transformer_fused.cpp  transformer_grouped.cpp  transformer_semifused.cpp  transformer_semigrouped.cpp  vgg.cpp  zfnet.cpp
(+415 files in other folders)
